user model and devise

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,8 +7,8 @@ development:
   <<: *default
   database: bookwrm_starter_app_dev
   host: localhost
-  user: <%= ENV['POSTGRES_USERNAME'] %>
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  # user: <%= ENV['POSTGRES_USERNAME'] %>
+  # password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -17,8 +17,8 @@ test:
   <<: *default
   database: bookwrm_starter_app_test
   host: localhost
-  user: <%= ENV['POSTGRES_USERNAME'] %>
-  password: <%= ENV['POSTGRES_PASSWORD'] %>
+  # user: <%= ENV['POSTGRES_USERNAME'] %>
+  # password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 production:
   <<: *default
